Fix Islington CC logo alignment

--- a/microcosm/static/themes/3/css/base.css
+++ b/microcosm/static/themes/3/css/base.css
@@ -1,5 +1,5 @@
 #logo {
-    margin: 18px;
+    margin-top: 18px;
 	max-height: 60px;
 }
 .headBand {
